Fix issue with text alignment

--- a/app/frontend/styles/_filter.scss
+++ b/app/frontend/styles/_filter.scss
@@ -1,3 +1,9 @@
+.moj-filter-layout__content {
+  .moj-action-bar {
+    height: 60px;
+  }
+}
+
 .moj-action-bar__filter {
   @include govuk-media-query($from: desktop) {
     display: none;
@@ -6,12 +12,11 @@
 
 .filter-toggle-button {
   float: right;
-  border-bottom: govuk-spacing(3);
+  margin-bottom: govuk-spacing(1);
   @include govuk-media-query($from: desktop) {
     display: none;
   }
 }
-
 
 .moj-action-bar__filter:after {
   background: none;
@@ -30,6 +35,10 @@
   border-bottom: 0;
   padding-top: govuk-spacing(3);
   padding-bottom: govuk-spacing(3);
+}
+
+.applications-sorted-by-explanation {
+  margin-top: govuk-spacing(2);
 }
 
 .moj-filter__selected {
